--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blackjack</title>
   <script src="scripts/main.js"></script>
+  <link rel="stylesheet" href="/extras/HereIsOneIPreparedEarlier.css">
 </head>
 <body>
   <div class="message-box" id="messages"></div>
@@ -14,7 +15,6 @@
         <span id="dealer-points" class="points"></span>
       </label>
       <div id="dealer-hand" class="hand">
-        <!-- Dealer Hand -->
       </div>
     </div>
     <div class="player">
@@ -22,7 +22,6 @@
         <span id="player-points" class="points"></span>
       </label>
       <div id="player-hand" class="hand">
-        <!-- Player Hand -->
       </div>
     </div>
     <div class="buttons">
